--- a/CoreApi/laradock/caddy/Caddyfile
+++ b/CoreApi/laradock/caddy/Caddyfile
@@ -1,5 +1,6 @@
 # Docs: https://caddyserver.com/docs/caddyfile
 0.0.0.0:80 {
+    cors /
     root /var/www/public
     fastcgi / php-fpm:9000 php {
         index index.php
