--- a/Documentation/package.json
+++ b/Documentation/package.json
@@ -9,6 +9,8 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.12.3",
+    "global": "^4.3.2",
+    "swagger": "^0.7.5",
     "swagger-express-mw": "^0.1.0"
   },
   "devDependencies": {
