--- a/CoreApi/.travis.yml
+++ b/CoreApi/.travis.yml
@@ -4,6 +4,7 @@ php:
   - "7.1"
 
 before_script:
+  - cd CoreApi
   - cp .env.travis .env
   - mysql -e 'create database homestead_test;'
   - composer self-update
