--- a/CoreApi/.env.example
+++ b/CoreApi/.env.example
@@ -5,6 +5,10 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
+HEADER_SCANNER_URL=
+DOMXSS_SCANNER_URL=
+INFOLEAK_SCANNER_URL=
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
