--- a/CoreApi/composer.json
+++ b/CoreApi/composer.json
@@ -6,7 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "barryvdh/laravel-ide-helper": "^2.4",
+        "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~3.3",
+        "gladcodes/keygen": "^1.1",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0"
     },
