--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=7.0.0",
         "barryvdh/laravel-cors": "^0.10.0",
-        "barryvdh/laravel-ide-helper": "^2.4",
+        "barryvdh/laravel-ide-helper": "2.4.*",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~3.3",
         "gladcodes/keygen": "^1.1",
