--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ yarn-error.log
 !/laradock/.env
 /.idea
 *postman_collection*
-
+/.phpintel/*
 vendor/
 
 # Created by https://www.gitignore.io/api/linux,macos,windows,laravel,composer,phpstorm,sublimetext
