Removed ide-helper from Repo

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ yarn-error.log
 /.phpintel/*
 vendor/
 
+_ide_helper.php
+_ide_helper_models.php
+
 # Created by https://www.gitignore.io/api/linux,macos,windows,laravel,composer,phpstorm,sublimetext
 
 ### Composer ###
