--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/linux,macos,windows,laravel,composer,phpstorm,sublimetext
+..env.swp
+.phpstorm.meta.php
+curr*
