--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,24 @@ language: php
 php:
   - "7.1"
 
+services:
+  - mysql
+
+  addons:
+    apt:
+      sources:
+        - mysql-5.7-trusty
+      packages:
+        - mysql-server
+
+  dist: trusty
+
 before_script:
   - cp .env.travis .env
   - mysql -e 'create database homestead_test;'
   - composer self-update
   - composer install --no-interaction
   - php artisan key:generate
-
-services:
-  - mysql
 
 script:
   - vendor/bin/phpunit  
