--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "gladcodes/keygen": "^1.1",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "mpociot/laravel-apidoc-generator": "^2.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
