--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "mpociot/laravel-apidoc-generator": "^2.0"
+        "mpociot/laravel-apidoc-generator": "dev-master"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
