--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ HEADER_SCANNER_URL=
 DOMXSS_SCANNER_URL=
 INFOLEAK_SCANNER_URL=
 
+BLA_URL='https://api.siwecos.de/bla/current/public'
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
