--- a/worker.conf
+++ b/worker.conf
@@ -1,9 +1,18 @@
 [supervisord]
-nodaemon=false
+nodaemon=true
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
 command=php /app/artisan queue:work redis --queue=default
+autostart=true
+autorestart=true
+numprocs=1
+startretries=10
+stdout_events_enabled=1
+
+[program:laravel-server]
+process_name=%(program_name)s_%(process_num)02d
+command=php /app/artisan serve --host=0.0.0.0 --port=8666
 autostart=true
 autorestart=true
 numprocs=1
