modify supervisord worker

--- a/worker.conf
+++ b/worker.conf
@@ -3,10 +3,10 @@ nodaemon=true
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /app/artisan queue:work redis --queue=default
+command=php /app/artisan queue:work redis --queue=default --sleep=3 --tries=3
 autostart=true
 autorestart=true
-numprocs=1
+numprocs=8
 startretries=10
 stdout_events_enabled=1
 
