--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 APP_NAME=Laravel
 APP_ENV=docker
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
+LOG_CHANNEL=errorlog
 
 HEADER_SCANNER_URL=
 DOMXSS_SCANNER_URL=
