--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_KEY=
 APP_DEBUG=false
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
-APP_LOG=syslog
+APP_LOG=errorlog
 
 HEADER_SCANNER_URL=
 DOMXSS_SCANNER_URL=
