--- a/worker.conf
+++ b/worker.conf
@@ -9,6 +9,7 @@ autorestart=true
 numprocs=8
 startretries=10
 stdout_events_enabled=1
+loglevel=debug
 
 [program:laravel-server]
 process_name=%(program_name)s_%(process_num)02d
@@ -18,3 +19,4 @@ autorestart=true
 numprocs=1
 startretries=10
 stdout_events_enabled=1
+loglevel=debug
