Added Apache to Remove artisan server

--- a/worker.conf
+++ b/worker.conf
@@ -3,20 +3,10 @@ nodaemon=true
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /app/artisan queue:work redis --queue=default --sleep=3 --tries=3
+command=php /var/www/html/artisan queue:work redis --queue=default --sleep=3 --tries=3
 autostart=true
 autorestart=true
 numprocs=8
-startretries=10
-stdout_events_enabled=1
-loglevel=debug
-
-[program:laravel-server]
-process_name=%(program_name)s_%(process_num)02d
-command=php /app/artisan serve --host=0.0.0.0 --port=8666
-autostart=true
-autorestart=true
-numprocs=1
 startretries=10
 stdout_events_enabled=1
 loglevel=debug
