--- a/worker.conf
+++ b/worker.conf
@@ -10,3 +10,17 @@ numprocs=8
 startretries=10
 stdout_events_enabled=1
 loglevel=debug
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+
+[program:laravel-server]
+process_name=%(program_name)s_%(process_num)02d
+command=apache2ctl start
+autostart=true
+autorestart=true
+numprocs=1
+startretries=10
+stdout_events_enabled=1
+loglevel=debug
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
