--- a/php.ini
+++ b/php.ini
@@ -1,3 +1,4 @@
 log_errors = On
-error_log = /proc/self/fd/1
-access.log = /proc/self/fd/1
+error_log = /dev/stderr
+access_log = /dev/stdout
+access.log = /dev/stdout
