--- a/worker.conf
+++ b/worker.conf
@@ -17,9 +17,8 @@ stdout_logfile_maxbytes=0
 process_name=%(program_name)s_%(process_num)02d
 command=apache2ctl start
 autostart=true
-autorestart=true
+autorestart=false
 numprocs=1
-startretries=10
 stdout_events_enabled=1
 loglevel=debug
 stdout_logfile=/dev/stdout
