Added Redis to Clusterconfig

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis-service
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
