--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ HEADER_SCANNER_URL=
 DOMXSS_SCANNER_URL=
 INFOLEAK_SCANNER_URL=
 
-BLA_URL='https://api.siwecos.de/bla/current/public'
+BLA_URL='http://business-layer-api-service'
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -38,3 +38,4 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
