--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
-        "barryvdh/laravel-cors": "^0.10.0",
-        "barryvdh/laravel-ide-helper": "2.4.*",
+        "barryvdh/laravel-cors": "0.*",
+        "barryvdh/laravel-ide-helper": "2.5.*",
         "doctrine/dbal": "^2.6",
-        "fideloper/proxy": "~3.3",
+        "fideloper/proxy": "4.*",
         "gladcodes/keygen": "^1.1",
         "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "5.5.*",
+        "laravel/framework": "5.7.*",
         "laravel/tinker": "~1.0",
         "mpociot/laravel-apidoc-generator": "dev-master",
         "predis/predis": "^1.1"
