--- a/worker.conf
+++ b/worker.conf
@@ -10,8 +10,7 @@ numprocs=8
 startretries=10
 stdout_events_enabled=1
 loglevel=debug
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
+redirect_stderr=true
 
 [program:laravel-server]
 process_name=%(program_name)s_%(process_num)02d
@@ -21,5 +20,4 @@ autorestart=false
 numprocs=1
 stdout_events_enabled=1
 loglevel=debug
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
+redirect_stderr=true
