Change Supervisor Config

--- a/worker.conf
+++ b/worker.conf
@@ -1,5 +1,10 @@
 [supervisord]
-nodaemon=true
+logfile=/dev/null             ; (main log file;default $CWD/supervisord.log)
+logfile_maxbytes=0            ; (max main logfile bytes b4 rotation;default 50MB)
+logfile_backups=0             ; (num of main logfile rotation backups;default 10)
+loglevel=info                 ; (log level;default info; others: debug,warn,trace)
+pidfile=/tmp/supervisord.pid  ; (supervisord pidfile;default supervisord.pid)
+nodaemon=true                 ; (start in foreground if true;default false)
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
@@ -8,9 +13,14 @@ autostart=true
 autorestart=true
 numprocs=8
 startretries=10
-stdout_events_enabled=1
 loglevel=debug
-redirect_stderr=true
+command=/usr/sbin/nginx
+stdout_events_enabled=true
+stderr_events_enabled=true
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
 
 [program:laravel-server]
 process_name=%(program_name)s_%(process_num)02d
@@ -18,6 +28,11 @@ command=apache2ctl start
 autostart=true
 autorestart=false
 numprocs=1
-stdout_events_enabled=1
 loglevel=debug
-redirect_stderr=true
+command=/usr/sbin/nginx
+stdout_events_enabled=true
+stderr_events_enabled=true
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
