Change PHP Logging

--- a/worker.conf
+++ b/worker.conf
@@ -1,10 +1,9 @@
 [supervisord]
-logfile=/dev/null             ; (main log file;default $CWD/supervisord.log)
+logfile=/var/log/supervisor/supervisord.log; ; (main log file;default $CWD/supervisord.log)
 logfile_maxbytes=0            ; (max main logfile bytes b4 rotation;default 50MB)
 logfile_backups=0             ; (num of main logfile rotation backups;default 10)
-loglevel=info                 ; (log level;default info; others: debug,warn,trace)
+loglevel=debug                 ; (log level;default info; others: debug,warn,trace)
 pidfile=/tmp/supervisord.pid  ; (supervisord pidfile;default supervisord.pid)
-nodaemon=true                 ; (start in foreground if true;default false)
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
@@ -14,23 +13,18 @@ autorestart=true
 numprocs=8
 startretries=10
 loglevel=debug
+redirect_stderr=true
+redirect_stdout=true
 stdout_events_enabled=true
 stderr_events_enabled=true
-stdout_logfile_maxbytes=0
-stderr_logfile_maxbytes=0
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
 
 [program:laravel-server]
 process_name=%(program_name)s_%(process_num)02d
 command=apache2ctl start
-autostart=true
-autorestart=false
+autostart=2
 numprocs=1
 loglevel=debug
+redirect_stderr=true
+redirect_stdout=true
 stdout_events_enabled=true
 stderr_events_enabled=true
-stdout_logfile_maxbytes=0
-stderr_logfile_maxbytes=0
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
