--- a/worker.conf
+++ b/worker.conf
@@ -1,5 +1,5 @@
 [supervisord]
-logfile=/var/log/supervisord.log; ; (main log file;default $CWD/supervisord.log)
+logfile=/var/log/supervisord.log ; (main log file;default $CWD/supervisord.log)
 logfile_maxbytes=0            ; (max main logfile bytes b4 rotation;default 50MB)
 logfile_backups=0             ; (num of main logfile rotation backups;default 10)
 loglevel=debug                 ; (log level;default info; others: debug,warn,trace)
