--- a/worker.conf
+++ b/worker.conf
@@ -17,6 +17,10 @@ redirect_stderr=true
 redirect_stdout=true
 stdout_events_enabled=true
 stderr_events_enabled=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 
 [program:laravel-server]
 process_name=%(program_name)s_%(process_num)02d
@@ -28,3 +32,7 @@ redirect_stderr=true
 redirect_stdout=true
 stdout_events_enabled=true
 stderr_events_enabled=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
