--- a/worker.conf
+++ b/worker.conf
@@ -10,8 +10,6 @@ process_name=%(program_name)s_%(process_num)02d
 command=php /var/www/html/artisan queue:work redis --queue=default --sleep=3 --tries=3
 autostart=true
 autorestart=true
-numprocs=8
-startretries=10
 loglevel=debug
 redirect_stderr=true
 redirect_stdout=true
@@ -24,9 +22,7 @@ stderr_logfile_maxbytes=0
 
 [program:laravel-server]
 process_name=%(program_name)s_%(process_num)02d
-command=apache2ctl start
-autostart=1
-numprocs=1
+command=apache2ctl start -DFOREGROUND
 loglevel=debug
 redirect_stderr=true
 redirect_stdout=true
