Fix Laravel 5.7 Update

--- a/worker.conf
+++ b/worker.conf
@@ -22,7 +22,7 @@ stderr_logfile_maxbytes=0
 
 [program:laravel-server]
 process_name=%(program_name)s_%(process_num)02d
-command=apache2ctl start -DFOREGROUND
+command=apache2ctl start
 loglevel=debug
 redirect_stderr=true
 redirect_stdout=true
