--- a/worker.conf
+++ b/worker.conf
@@ -1,34 +1,13 @@
 [supervisord]
-logfile=/var/log/supervisord.log ; (main log file;default $CWD/supervisord.log)
-logfile_maxbytes=0            ; (max main logfile bytes b4 rotation;default 50MB)
-logfile_backups=0             ; (num of main logfile rotation backups;default 10)
-loglevel=debug                 ; (log level;default info; others: debug,warn,trace)
-pidfile=/tmp/supervisord.pid  ; (supervisord pidfile;default supervisord.pid)
+nodaemon=true
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
 command=php /var/www/html/artisan queue:work redis --queue=default --sleep=3 --tries=3
-autostart=true
+numprocs=1
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 autorestart=true
-loglevel=debug
-redirect_stderr=true
-redirect_stdout=true
-stdout_events_enabled=true
-stderr_events_enabled=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-
-[program:laravel-server]
-process_name=%(program_name)s_%(process_num)02d
-command=apache2ctl start
-loglevel=debug
-redirect_stderr=true
-redirect_stdout=true
-stdout_events_enabled=true
-stderr_events_enabled=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
+startretries=0
