--- a/worker.conf
+++ b/worker.conf
@@ -11,3 +11,14 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=true
 startretries=0
+
+[program:laravel-server]
+process_name=%(program_name)s_%(process_num)02d
+command=apache2ctl start
+numprocs=1
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autorestart=true
+startretries=0
