--- a/worker.conf
+++ b/worker.conf
@@ -14,7 +14,7 @@ startretries=0
 
 [program:laravel-server]
 process_name=%(program_name)s_%(process_num)02d
-command=apache2ctl start
+command=apache2-foreground
 numprocs=1
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
