--- a/worker.conf
+++ b/worker.conf
@@ -4,13 +4,14 @@ nodaemon=true
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
 command=php /var/www/html/artisan queue:work redis --queue=default --sleep=3 --tries=3
-numprocs=1
+autostart=true
+autorestart=true
+numprocs=8
+startretries=10
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-autorestart=true
-startretries=0
 
 [program:laravel-server]
 process_name=%(program_name)s_%(process_num)02d
