--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "5.7.*",
         "laravel/tinker": "~1.0",
         "mpociot/laravel-apidoc-generator": "dev-master",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "spatie/laravel-cors": "^1.3"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
