--- a/worker.conf
+++ b/worker.conf
@@ -23,3 +23,8 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=true
 startretries=0
+
+[program:laravel-scheduler]
+command = cron -f -L 15
+autostart=true
+autorestart=true
