--- a/worker.conf
+++ b/worker.conf
@@ -1,5 +1,6 @@
 [supervisord]
 nodaemon=true
+loglevel=debug
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
@@ -23,8 +24,3 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=true
 startretries=0
-
-[program:laravel-scheduler]
-command = cron -f -L 15
-autostart=true
-autorestart=true
