Implemented unified usage of User-Agent headers.

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 APP_LOG=syslog
 
+USER_AGENT='Mozilla/5.0 (X11; Linux x86_64; rv:63.0) Gecko/20100101 Firefox/63.0'
 BLA_URL='http://business-layer-api-service'
 
 DB_CONNECTION=mysql
