--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
+APP_NAME="SIWECOS Core-API"
 APP_ENV=docker
 APP_KEY=SIWEOCSCOREAPI
 APP_DEBUG=false
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://siwecos-core-api
 APP_LOG=syslog
 
 USER_AGENT='Mozilla/5.0 (X11; Linux x86_64; rv:63.0) Gecko/20100101 Firefox/63.0'
@@ -31,9 +31,3 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-
-SCAN_COUNT=4
