Fixed APP_KEY generation. Best of two worlds.

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,17 @@
 APP_NAME="SIWECOS Core-API"
 APP_ENV=docker
-APP_KEY=SIWEOCSCOREAPI
+APP_KEY=
 APP_DEBUG=false
 APP_LOG_LEVEL=debug
 APP_URL=http://siwecos-core-api
 APP_LOG=syslog
 
 USER_AGENT='Mozilla/5.0 (X11; Linux x86_64; rv:63.0) Gecko/20100101 Firefox/63.0'
-BLA_URL='http://business-layer-api-service'
+
+BLA_URL=
+HEADER_SCANNER_URL=
+DOMXSS_SCANNER_URL=
+INFOLEAK_SCANNER_URL=
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
