--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,15 @@
-APP_NAME="SIWECOS Core-API"
+APP_NAME=Laravel
 APP_ENV=docker
-APP_KEY=SIWEOCSCOREAPI
-APP_DEBUG=false
+APP_KEY=
+APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://siwecos-core-api
-APP_LOG=syslog
+APP_URL=http://localhost
 
-USER_AGENT='Mozilla/5.0 (X11; Linux x86_64; rv:63.0) Gecko/20100101 Firefox/63.0'
-BLA_URL='http://business-layer-api-service'
+HEADER_SCANNER_URL=
+DOMXSS_SCANNER_URL=
+INFOLEAK_SCANNER_URL=
+
+BLA_URL='https://api.siwecos.de/bla/current/public'
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -21,7 +23,7 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
-REDIS_HOST=redis-service
+REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -31,3 +33,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
