--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,15 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
-        "barryvdh/laravel-cors": "0.*",
-        "barryvdh/laravel-ide-helper": "2.5.*",
+        "barryvdh/laravel-cors": "^0.10.0",
+        "barryvdh/laravel-ide-helper": "2.4.*",
         "doctrine/dbal": "^2.6",
-        "fideloper/proxy": "4.*",
+        "fideloper/proxy": "~3.3",
         "gladcodes/keygen": "^1.1",
         "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "5.7.*",
+        "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "mpociot/laravel-apidoc-generator": "dev-master",
-        "predis/predis": "^1.1",
-        "spatie/laravel-cors": "^1.3"
+        "mpociot/laravel-apidoc-generator": "dev-master"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
