--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,12 @@ APP_LOG=syslog
 USER_AGENT='Mozilla/5.0 (X11; Linux x86_64; rv:63.0) Gecko/20100101 Firefox/63.0'
 
 BLA_URL=
-HEADER_SCANNER_URL=
-DOMXSS_SCANNER_URL=
-INFOLEAK_SCANNER_URL=
+
+SCANNER_HEADER_URL=
+SCANNER_DOMXSS_URL=
+SCANNER_INFOLEAK_URL=
+SCANNER_WS_TLS_URL=
+SCANNER_INI_S_URL=
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
