Changed default database for testing / sqlite does not work properly.

--- a/.env.testing
+++ b/.env.testing
@@ -8,6 +8,12 @@ APP_URL=http://localhost
 BLA_URL='http://siwecos-business-layer'
 
 
+DB_CONNECTION=mysql
+DB_DATABASE=default
+DB_USERNAME=default
+DB_PASSWORD=secret
+DB_HOST=mariadb
+
 SCANNER_HEADER_URL=
 SCANNER_DOMXSS_URL=
 SCANNER_INFOLEAK_URL=
