Refactored scanStart, saved callbackurls (#188), fixed and enhanced all PHPUnit tests.

--- a/.env.testing
+++ b/.env.testing
@@ -14,11 +14,11 @@ DB_USERNAME=default
 DB_PASSWORD=secret
 DB_HOST=mariadb
 
-SCANNER_HEADER_URL=
-SCANNER_DOMXSS_URL=
-SCANNER_INFOLEAK_URL=
-SCANNER_WS_TLS_URL=
-SCANNER_INI_S_URL=
+SCANNER_HEADER_URL=http://header-domxss-scanner/api/v1/header
+SCANNER_DOMXSS_URL=http://header-domxss-scanner/api/v1/domxss
+SCANNER_INFOLEAK_URL=http://infoleak-scanner
+SCANNER_WS_TLS_URL=http://ws-tls-scanner/WS-TLS-Scanner-2.0/start
+SCANNER_INI_S_URL=http://ini-s-scanner/scanner/start
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
