--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ php:
 services:
   - mysql
 
+cache:
+  directories:
+    - "$HOME/google-cloud-sdk/"
+
 addons:
   apt:
     sources:
@@ -25,6 +29,15 @@ before_script:
 script:
   - vendor/bin/phpunit
 
+  # Set env vars
+env:
+  global:
+    - GOOGLE_APPLICATION_CREDENTIALS=~/gcloud-service-key.json
+    - PROJECT_NAME_PRD=SiweocsK8sCluster
+    - CLUSTER_NAME_PRD=siwecoscluster
+    - CLOUDSDK_COMPUTE_ZONE=europe-west1-b
+
+
 jobs:
   include:
     - stage: build docker image
@@ -34,3 +47,23 @@ jobs:
       - docker images
       - docker tag siwecos-core-api "$DOCKER_REPO"/siwecos-core-api:"$TRAVIS_BRANCH"
       - docker push "$DOCKER_REPO"/siwecos-core-api:"$TRAVIS_BRANCH"
+
+before_deploy:
+  - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
+  - source /home/travis/google-cloud-sdk/path.bash.inc
+  - gcloud --quiet version
+  - gcloud --quiet components update
+  - gcloud --quiet components beta update
+  - gcloud --quiet components update kubectl
+
+deploy:
+  - provider: script
+    script: ./deploy-staging.sh
+    skip_cleanup: true
+    on:
+      branch: staging
+  - provider: script
+    script: ./deploy-master.sh
+    skip_cleanup: true
+    on:
+      branch: master
