Fix Travis File

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ deploy:
     script: ./deploy-staging.sh
     skip_cleanup: true
     on:
-      branch: staging
+      branch: develop
   - provider: script
     script: ./deploy-master.sh
     skip_cleanup: true
