--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,21 @@
 {
     "name": "laravel/laravel",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": ">=7.0.0",
         "barryvdh/laravel-cors": "0.*",
-        "barryvdh/laravel-ide-helper": "2.5.*",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "4.*",
         "gladcodes/keygen": "^1.1",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "~1.0",
-        "mpociot/laravel-apidoc-generator": "dev-master",
         "predis/predis": "^1.1",
         "spatie/laravel-cors": "^1.3"
     },
@@ -22,7 +23,8 @@
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "~6.0",
+        "barryvdh/laravel-ide-helper": "2.5.*",
     },
     "autoload": {
         "classmap": [
@@ -40,8 +42,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": [
-            ]
+            "dont-discover": []
         }
     },
     "scripts": {
