--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~6.0",
-        "barryvdh/laravel-ide-helper": "2.5.*",
+        "barryvdh/laravel-ide-helper": "2.5.*"
     },
     "autoload": {
         "classmap": [
