--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,10 @@ language: php
 php:
   - "7.2"
 
-services:
-  - mysql
-
 cache:
   directories:
     - "$HOME/google-cloud-sdk/"
-
-addons:
-  apt:
-    sources:
-      - mysql-5.7-trusty
+    - "./vendor"
 
 dist: trusty
 
@@ -23,41 +16,43 @@ before_script:
 
 script:
   - vendor/bin/phpunit
-
-  # Set env vars
-env:
-  global:
-    - GOOGLE_APPLICATION_CREDENTIALS=~/gcloud-service-key.json
-    - PROJECT_NAME_PRD=glowing-thunder-215513
-    - CLUSTER_NAME_PRD=siwecoscluster
-    - CLOUDSDK_COMPUTE_ZONE=europe-west1-b
-
-
-jobs:
-  include:
-    - stage: build docker image
-      script:
-      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      - docker build -t siwecos-core-api .
-      - docker images
-      - docker tag siwecos-core-api "$DOCKER_REPO"/siwecos-core-api:"$TRAVIS_BRANCH"
-      - docker push "$DOCKER_REPO"/siwecos-core-api:"$TRAVIS_BRANCH"
+  - docker build -t siwecos-core-api .
 
 before_deploy:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
   - source /home/travis/google-cloud-sdk/path.bash.inc
   - gcloud --quiet version
   - gcloud --quiet components update
   - gcloud --quiet components update kubectl
+  - echo $GCLOUD_KEY | base64 --decode -i > ${HOME}/gcloud-service-key.json
+  - gcloud auth activate-service-account --key-file ${HOME}/gcloud-service-key.json
+  - gcloud --quiet config set project $GOOGLE_PROJECT_NAME
+  - gcloud --quiet config set container/cluster $GOOGLE_CLUSTER_NAME
+  - gcloud --quiet config set compute/zone $GOOGLE_COMPUTE_ZONE
+  - gcloud --quiet container clusters get-credentials $GOOGLE_CLUSTER_NAME
 
 deploy:
   - provider: script
-    script: chmod +x deploy-staging.sh && ./deploy-staging.sh
     skip_cleanup: true
     on:
       branch: develop
+    script: >-
+      docker tag siwecos-core-api siwecos/siwecos-core-api:develop &&
+      docker push siwecos/siwecos-core-api:develop &&
+      kubectl patch deployment siwecos-core-api --namespace staging -p '{"spec":{"template":{"metadata":{"labels":{"date":"`date +'%s'`", "commit":"$TRAVIS_COMMIT"}}}}}'
   - provider: script
-    script: chmod +x deploy-master.sh && ./deploy-master.sh
     skip_cleanup: true
     on:
       branch: master
+    script: >-
+      docker tag siwecos-core-api siwecos/siwecos-core-api:latest &&
+      docker push siwecos/siwecos-core-api:latest &&
+      kubectl patch deployment siwecos-core-api --namespace production -p '{"spec":{"template":{"metadata":{"labels":{"date":"`date +'%s'`", "commit":"$TRAVIS_COMMIT"}}}}}'
+  - provider: script
+    skip_cleanup: true
+    on:
+      tags: true
+    script: >-
+      docker tag siwecos-core-api siwecos/siwecos-core-api:$TRAVIS_TAG &&
+      docker push siwecos/siwecos-core-api:$TRAVIS_TAG
