Change cron to supervisor for laravel scheduler

--- a/worker.conf
+++ b/worker.conf
@@ -24,3 +24,12 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=true
 startretries=0
+
+[program:laravel-scheduler]
+command=sh -c "while sleep 60; do php /var/www/html/artisan schedule:run; done"
+numprocs=1
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autorestart=true
