Add ScanStart routine

--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,14 @@ APP_URL=http://siwecos-core-api
 
 USER_AGENT='Mozilla/5.0 (X11; Linux x86_64; rv:63.0) Gecko/20100101 Firefox/63.0'
 
-SCANNER_DOMXSS_URL=
-SCANNER_HEADER_URL=
-SCANNER_INFOLEAK_URL=
-SCANNER_INI_S_URL=
-SCANNER_WS_TLS_URL=
+DOMXSS_SCANNER_URL=
+INI_S_SCANNER_URL=
+INFOLEAK_SCANNER_URL=
+HEADER_SCANNER_URL=
+MAIL_SCANNER_URL=
+PORT_SCANNER_URL=
+TLS_SCANNER_URL=
+VERSION_SCANNER_URL=
 
 LOG_CHANNEL=syslog
 
