--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "spatie/laravel-cors": "^1.5"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.6",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
