--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,12 @@
         "laravel"
     ],
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/Lednerb/log-fake.git"
+        }
+    ],
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
@@ -23,7 +29,7 @@
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
         "phpunit/phpunit": "^7.5",
-        "timacdonald/log-fake": "^1.0"
+        "timacdonald/log-fake": "dev-feature-loggedTimesWithCallback"
     },
     "config": {
         "optimize-autoloader": true,
