Switched standard log channel to stdout.

--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ SMTP_SCANNER_URL=
 SMTPS_SCANNER_URL=
 VERSION_SCANNER_URL=
 
-LOG_CHANNEL=syslog
+LOG_CHANNEL=stdout
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
