--- a/.env.example
+++ b/.env.example
@@ -12,12 +12,7 @@ INFOLEAK_SCANNER_URL=
 HEADER_SCANNER_URL=
 PORT_SCANNER_URL=
 HTTPS_SCANNER_URL=
-POP3_SCANNER_URL=
-POP3S_SCANNER_URL=
-IMAP_SCANNER_URL=
-IMAPS_SCANNER_URL=
-SMTP_SCANNER_URL=
-SMTPS_SCANNER_URL=
+MAIL_SCANNER_URL=
 VERSION_SCANNER_URL=
 
 LOG_CHANNEL=stderr
